[package]
name = "vault-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
hex = "0.4.3"
aes-gcm = "0.10.3"
rand = "0.9.0-alpha.2"
ethers = "2.0"
bip39 = { version="2.1.0", features = ["rand"] }
k256 = { version = "0.13.4", features = ["ecdsa"] }
rand_core = "0.6.4"
serde_json = "1.0.132"