[package]
name = "vaulty"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
hex = "0.4.3"
aes-gcm = "0.10.3"
rand = "0.9.0-alpha.2"
ethers = { version="2.0" }
bip39 = { version="2.1.0", features = ["rand", "std"] }
k256 = { version = "0.13.4", features = ["ecdsa"] }
rand_core = "0.6.4"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.214", features = ["derive"] }