[package]
name = "vaulty"
version = "0.1.0"
authors = ["Mikhail Antonov <allelementaryfor@gmail.com>"]
edition = "2021"
description = "A CLI crypto wallet for EVM-compatible blockchains. Manage multiple accounts, send transactions, retrieve balances, and manage custom networks securely."
license = "MIT"
repository = "https://github.com/allelementary/cli-crypto-wallet"
homepage = "https://github.com/allelementary/cli-crypto-wallet"
readme = "README.md"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
hex = "0.4.3"
aes-gcm = "0.10.3"
rand = "0.9.0-alpha.2"
ethers = { version="2.0" }
bip39 = { version="2.1.0", features = ["rand", "std"] }
k256 = { version = "0.13.4", features = ["ecdsa"] }
rand_core = "0.6.4"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.214", features = ["derive"] }